--- a/assets/www/templates/ScenarioDetails.html
+++ b/assets/www/templates/ScenarioDetails.html
@@ -40,9 +40,10 @@
     </div>
 
 
-    <ion-content class="padding">
-        <div id="container"></div>
-        <div id="excelArea"  style="height:600px;margin-top: 100px;"></div>
+    <ion-content class="padding-top">
+        <!--<div class="padding" ng-if="isloadRecentClients" style="height:192px;"><span class="icon ion-loading-d"></span> Loading....</div>-->
+        <div id="container" style="margin-top:100px;" ></div>
+        <div id="excelArea"  style="height:600px;"></div>
     </ion-content>
 </ion-view>
 
