--- a/assets/www/templates/goals.html
+++ b/assets/www/templates/goals.html
@@ -1,8 +1,86 @@
 <ion-view >
     <div class="bar bar-header ">
+        <button class="button button-clear button-positive pull-left">
+  Home
+</button>
         <h1 class="h1 title">Goals</h1>
     </div>
-    <ion-content>
-        <h1>goals</h1>
+    <ion-content class="padding-top" style="margin-top:50px">
+         <div class = "row">
+        <div class = "col text-center">
+        <div class="card">
+          <button class = "button"><img src="img/current_expenses_icon.png" style="width : 100% ; height : 30%;margin-top:10px" class="padding"/>Current Expenses</button>
+            
+        </div>
+        
+        </div>
+          <div class = "col text-center">  
+         <div class="card">
+           <button class = "button "><img src="img/retirement_needs_icon.png" style="width : 100% ; height : 50%" class="padding" />Retirements Needs</button>
+           
+        </div>
+         
+          </div>
+          <div class = "col text-center">
+         <div class="card">
+           <button class = "button "><img src="img/lifestyle_assets_icon.png" style="width : 100% ; height : 50%" class="padding" />Lifestyle Assets</button>
+            
+        </div>
+        
+          </div>
+         </div>
+           <div class = "row">
+        <div class = "col text-center">
+         <div class="card">
+           <button class = "button"><img src="img/lifestyle_events_icon.png" style="width : 100% ; height : 50%" class="padding" /> Lifestyle Events</button>
+        </div>
+        
+        </div>
+        <div class = "col text-center">
+         <div class="card">
+           <button class = "button"><img src="img/investment_assets_icon.png" style="width : 100% ; height : 50%" class="padding"/>Investment Assests</button>
+            
+        </div>
+       <!--//Investment Assests-->
+        </div>
+        <div class = "col text-center">
+         <div class="card">
+           <button class = "button"><img src="img/estate_planning_icon.png" style="width : 100% ; height : 50%" class="padding" />Estate Planning</button>
+	    
+        </div>
+      
+        </div>
+           </div>
+         <div class = "row">
+        <div class = "col col-33 text-center">
+         <div class="card">
+           <button class = "button"><img src="img/managing_risks_icon.png" style="width : 100% ; height : 50%" class="padding" />Managing Risks</button>
+        
+        </div>
+       
+        </div>
+       
+         
+        <div class = "col col-33 text-center">
+         <div class="card">
+           <button class = "button "><img src="img/add_your_own_icon.png" style="width : 100% ; height : 50%" class="padding" />Add Your Own</button>
+            
+        </div>
+        
+        </div>
+        <!--<div class = "col text-center">
+         <div class="card">
+           <button class = "button"><img src="img/add_your_own_icon.png" style="width : 100% ; height : 100%" /></button>
+        
+        </div>
+        Title
+        </div>-->
+          </div>
+
+        <!--<div class="card icon ion-star icon-top" ng-click="testing()" >
+        <div class="item item-text-wrap">
+            home1
+        </div>
+        </div>-->
     </ion-content>
 </ion-view>
